# NXP_KEA

./: .gitignore  README.md
ADC_Driver/: .cproject  .project
ADC_Pot/: .cproject  .project
ADC_Pot_NoPE/: .cproject  .project
AdcFilters/: .cproject  .project
AdcSampling/: .cproject  .project
BlinkyLED/: .cproject  .project
BlinkyLed/: .cproject  .project
BlinkyLed_PE/: .cproject  .project
BlinkyNoPE/: .cproject  .project
BlinkyNoPE_APP_0x2000/: .cproject  .project
BlinkyNoPE_PTH1/: .project
Blinky_APP_0x2000/: .cproject  .project
BufferedSerial/: .cproject  .project
Clock_driver/: .cproject  .project
Flash_Driver/: .cproject  .project
GPIO_Experiments/: .cproject  .project
HeartBeat/: .cproject  .project
HeartBeat_PE/: .cproject  .project
LedBlink/: .cproject  .mxproject  .project  CMakeLists.txt  LedBlink.ioc  gdb_load_elf.txt  stlink_gdb_server.sh  stm32_flash.ld
LedBlink/Inc/: main.h
LedBlink/Src/: main.c
ModularizationParadigm/: .cproject  .project
PWM_Driver/: .cproject  .project
PWM_Driver_KEAZN64/: .cproject  .project  README.md
PWM_Gen/: .cproject
PWM_Gen_KEAZ64/: .cproject  .project  README.md
PWM_PE/: .cproject  .project
PWM_Pot/: .cproject  .project
PWM_Test/: .cproject  .project
ProcessorLoad/: .cproject  .project
SAMPLES/: FRDM-KEA Pin Function Mapping Modified.xlsx  README.md
SerialConsole/: .cproject  .project
SerialConsole_PE/: .cproject  .project
SerialECHO/: .cproject  .project
SerialECHO_PE/: .cproject  .project
SerialEcho2/: .cproject  .project
SerialEchoNoPE/: .cproject  .project
(+1268 files in other folders)
